chore: local dev cleanup
